removed unchecked exception code from Tests